# ableton-for-ai

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  ableton_client.py  audio_processor.py  config.py  config_utils.py  daemon_manager.py  mcp_server_ableton.py  osc_daemon.py  pyproject.toml  run_all.sh  run_analyze_summarize_create_spectrograms.sh  run_extract_ableton_project_data.sh  run_osc_daemon.sh  server.json  smithery.yaml
.github/workflows/: release.yml
agent-templates/: mix-engineer.md
