[project]
name = "ableton-for-ai"
version = "0.1.4"
description = "Bridge between Ableton Live and AI models via MCP — make your DAW hearable and visible to AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Peter Kolbe", email = "peter@peterkolbe.com" }
]
keywords = ["mcp", "ableton", "ableton-live", "music-production", "ai", "audio-analysis", "osc", "daw", "mixing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.2.4",
    "python-osc>=1.10.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "soundfile>=0.13.1",
    "numpy>=2.4.4",
    "pyloudnorm>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/peterkolbe/ableton-for-ai"
Repository = "https://github.com/peterkolbe/ableton-for-ai"
Issues = "https://github.com/peterkolbe/ableton-for-ai/issues"

[project.scripts]
ableton-for-ai = "mcp_server_ableton:main"
ableton-for-ai-cli = "ableton_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "mcp_server_ableton.py",
    "ableton_client.py",
    "audio_processor.py",
    "config.py",
    "config_utils.py",
    "daemon_manager.py",
    "osc_daemon.py",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
